Support dynamically computed convenience variables in get_internalvar_integer

When using $_thread in info threads to showonly the current thread,
you get this error:
```
(gdb) info thread $_thread
Convenience variable must have integer value.
Args must be numbers or '$' variables.
```

It's because $_thread is a dynamically computed convenience
variable, which isn't supported yet by get_internalvar_integer.

Now the output looks like this:
```
(gdb) info threads $_thread
  Id   Target Id           Frame
* 1    Thread 10640.0x2680 main () at C:/src/repos/binutils-gdb.git/gdb/testsuite/gdb.base/gdbvars.c:21
```

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=17600
Approved-By: Tom Tromey <tom@tromey.com>